<resources>
    <string name="app_name">Calorimety</string>
    <string name="calorycalc">CaloryCalc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_label_1">Главная</string>
    <string name="text_label_2">Аккаунт</string>
    <string name="hint_e_mail">Введите име пользователя</string>
    <string name="hint_pass">Введите пароль</string>
    <string name="btn_signIn">Войти</string>
    <string name="btn_reg">Регестрация</string>
    <string name="add_meal">Новый прием пищи</string>
    <string name="meal_name">Название:</string>
    <string name="group_name">Название группы:</string>
    <string name="product_name">Название продукта:</string>
    <string name="product_weight">Масса:</string>
    <string name="add_btn">Добавить</string>
    <string name="save_btn">Сохранить</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="username">Имя пользователя</string>
    <string name="password_reg">Пароль</string>
    <string name="btn_signOut">Выйти из аккаунта</string>
    <string name="description">Подробнее</string>
    <string name="delete">Удалить</string>
    <string name="backBtn">Назад</string>
    <string name="registration">Регистрация</string>
    <string name="deleteAcc">Удалить аккаунт</string>

</resources>