<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_meal"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb_add"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="invisible" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LL_add"
    android:visibility="invisible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/meal_name"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:gravity="start|center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_meal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/group_name"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:gravity="start|center"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_group"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:padding="12dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:gravity="start|center"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="0dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_weight"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:gravity="start|center"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_weight"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_btn" />
        </FrameLayout>




    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/save_btn" />

</FrameLayout>

</LinearLayout>