<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".fragments.InAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="21dp"
        android:text="@string/text_label_2"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="InefficientWeight" />
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/separator"
            android:layout_height="3dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.63"
        android:gravity="center"
        android:text="Вы вошли в аккаунт"
        android:textSize="30sp"
        android:textStyle="bold" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/btn_signOut"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteAccount"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/deleteAcc"
        android:layout_marginBottom="70dp" />

</FrameLayout>