<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddMealFragment"
    android:background="@color/dark_grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="12dp"
        android:text="@string/add_meal"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/meal_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/group_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_group"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="12dp"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/bth_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Button" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Button"/>


    </LinearLayout>

</LinearLayout>